update packages and added darkmode

--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,51 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  padding-bottom: 100px;
-  color: #333;
+@font-face {
+  font-family: "Oswald";
+  src: url('./assets/Oswald-Regular.ttf') format('truetype');
 }
 
-* {
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+:root {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+}
+
+
+a,
+button {
   -webkit-tap-highlight-color: transparent;
+}
+
+a {
+  font-weight: 500;
+  text-decoration: inherit;
+}
+
+body {
+  margin: 0;
+}
+
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+    background-color: #f3f4f6;
+  }
 }
